--- a/ZombieGuiTest/en.lproj/MainStoryboard.storyboard
+++ b/ZombieGuiTest/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2549" systemVersion="11E53" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2549" systemVersion="11E2617" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="2">
     <dependencies>
         <deployment defaultVersion="1296" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1498"/>
@@ -197,7 +197,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rdo-t9-XQU" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="1pQ-Rg-iz9" customClass="OptionsViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3Em-Vc-HwN">
-                        <rect key="frame" x="0.0" y="64" width="768" height="960"/>
+                        <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Server IP Address" minimumFontSize="17" id="cKY-RT-oTK">
@@ -246,7 +246,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uiX-VG-nQy" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tableViewController id="X7s-VJ-6Or" customClass="JoinGameViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="JiB-V4-Z0z">
-                        <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
+                        <rect key="frame" x="0.0" y="64" width="768" height="960"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <view key="tableHeaderView" opaque="NO" contentMode="scaleToFill" id="QLk-9b-VBS">
@@ -413,14 +413,14 @@
                     <navigationItem key="navigationItem" id="5fg-FE-ZVc"/>
                     <connections>
                         <segue destination="ksl-lR-LfY" kind="modal" identifier="segFightViewToMapView" id="1H2-8S-3o3"/>
-                        <segue destination="X7s-VJ-6Or" kind="modal" identifier="segFightViewToJoinGameView" id="clW-Fp-xgq"/>
                         <segue destination="qJD-cS-TvI" kind="popover" identifier="segPopoverFight" popoverAnchorView="GUu-We-pCa" id="Gg5-En-9z8">
                             <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
                         </segue>
+                        <segue destination="yLB-k0-mcp" kind="modal" identifier="segFightViewToMainMenu" id="mQG-Fp-Xu7"/>
                     </connections>
                 </tableViewController>
             </objects>
-            <point key="canvasLocation" x="3624" y="679"/>
+            <point key="canvasLocation" x="3636" y="687"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="xke-KU-fPK">
@@ -457,7 +457,7 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="clW-Fp-xgq"/>
         <segue reference="1H2-8S-3o3"/>
+        <segue reference="mQG-Fp-Xu7"/>
     </inferredMetricsTieBreakers>
 </document>
