--- a/ZombieGuiTest/en.lproj/MainStoryboard.storyboard
+++ b/ZombieGuiTest/en.lproj/MainStoryboard.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2549" systemVersion="11E53" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.1" toolsVersion="2182" systemVersion="11E53" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="2">
     <dependencies>
         <deployment defaultVersion="1296" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1498"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1179"/>
     </dependencies>
     <scenes>
         <!--Login View Controller-->
@@ -246,7 +246,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uiX-VG-nQy" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tableViewController id="X7s-VJ-6Or" customClass="JoinGameViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="JiB-V4-Z0z">
-                        <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
+                        <rect key="frame" x="0.0" y="64" width="768" height="960"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <view key="tableHeaderView" opaque="NO" contentMode="scaleToFill" id="QLk-9b-VBS">
@@ -329,11 +329,11 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="m5j-mJ-ba9" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController storyboardIdentifier="MapViewController" title="MapViewController" id="ksl-lR-LfY" customClass="MapViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="hRS-xC-EY2">
-                        <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
+                        <rect key="frame" x="0.0" y="64" width="768" height="960"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" id="KxZ-Jd-IIU">
-                                <rect key="frame" x="50" y="48" width="668" height="908"/>
+                                <rect key="frame" x="50" y="48" width="668" height="864"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </mapView>
                         </subviews>
@@ -413,7 +413,6 @@
                     <navigationItem key="navigationItem" id="5fg-FE-ZVc"/>
                     <connections>
                         <segue destination="ksl-lR-LfY" kind="modal" identifier="segFightViewToMapView" id="1H2-8S-3o3"/>
-                        <segue destination="X7s-VJ-6Or" kind="modal" identifier="segFightViewToJoinGameView" id="clW-Fp-xgq"/>
                         <segue destination="qJD-cS-TvI" kind="popover" identifier="segPopoverFight" popoverAnchorView="GUu-We-pCa" id="Gg5-En-9z8">
                             <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
                         </segue>
@@ -457,7 +456,6 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="clW-Fp-xgq"/>
-        <segue reference="1H2-8S-3o3"/>
+        <segue reference="EsY-3b-2I5"/>
     </inferredMetricsTieBreakers>
 </document>
