--- a/ZombieGuiTest/en.lproj/MainStoryboard.storyboard
+++ b/ZombieGuiTest/en.lproj/MainStoryboard.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.1" toolsVersion="2182" systemVersion="11E53" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2549" systemVersion="11E2617" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="2">
     <dependencies>
         <deployment defaultVersion="1296" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1179"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1498"/>
     </dependencies>
     <scenes>
         <!--Login View Controller-->
@@ -169,7 +169,6 @@
                                 </state>
                                 <connections>
                                     <action selector="btnCreateGameOnClick:" destination="LuZ-aD-vX1" eventType="touchUpInside" id="1IZ-Ck-G1c"/>
-                                    <segue destination="ksl-lR-LfY" kind="push" id="EsY-3b-2I5"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Game Name" minimumFontSize="17" id="tHw-hE-8Fi">
@@ -186,10 +185,11 @@
                     <connections>
                         <outlet property="btnCreateGame" destination="Qxg-xi-EK3" id="pZH-Cw-ctA"/>
                         <outlet property="edtGameName" destination="tHw-hE-8Fi" id="W0q-ia-NwG"/>
+                        <segue destination="ksl-lR-LfY" kind="push" identifier="segCreateViewToMapView" id="x7g-x0-aQc"/>
                     </connections>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="1590" y="1331"/>
+            <point key="canvasLocation" x="1554" y="1395"/>
         </scene>
         <!--Options View Controller - Options-->
         <scene sceneID="0fs-nS-GtN">
@@ -197,7 +197,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rdo-t9-XQU" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="1pQ-Rg-iz9" customClass="OptionsViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3Em-Vc-HwN">
-                        <rect key="frame" x="0.0" y="0.0" width="768" height="1004"/>
+                        <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Server IP Address" minimumFontSize="17" id="cKY-RT-oTK">
@@ -427,58 +427,13 @@
         <image name="btnLogIn_v1.png" width="394" height="342"/>
         <image name="btnOptions_v1.png" width="966" height="264"/>
     </resources>
-    <classes>
-        <class className="Create_GameViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/Create_GameViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="btnCreateGameOnClick:"/>
-                <relationship kind="outlet" name="btnCreateGame" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="edtGameName" candidateClass="UITextField"/>
-            </relationships>
-        </class>
-        <class className="FightViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/FightViewController.h"/>
-        </class>
-        <class className="JoinGameViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/JoinGameViewController.h"/>
-        </class>
-        <class className="Login_ViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/Login_ViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="edtIPAddressChanged:"/>
-                <relationship kind="action" name="onBtnLoginClick:"/>
-                <relationship kind="outlet" name="edtIPAddress" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="edtUserName" candidateClass="UITextField"/>
-            </relationships>
-        </class>
-        <class className="MainMenuCiewControllerViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/MainMenuCiewControllerViewController.h"/>
-        </class>
-        <class className="MapViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/MapViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="mapView" candidateClass="MKMapView"/>
-            </relationships>
-        </class>
-        <class className="OptionsViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/OptionsViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="btnReconnectOnClick:"/>
-                <relationship kind="action" name="sgNetworkConnectionValueChanged:"/>
-                <relationship kind="action" name="startMyTimer:"/>
-                <relationship kind="action" name="stopMyTimer:"/>
-                <relationship kind="outlet" name="edtIPAddress" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="sgNetworkConnection" candidateClass="UISegmentedControl"/>
-                <relationship kind="outlet" name="txtConnecting" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="OwnNavigationController" superclassName="UINavigationController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/OwnNavigationController.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="mQG-Fp-Xu7"/>
+        <segue reference="x7g-x0-aQc"/>
+    </inferredMetricsTieBreakers>
 </document>
