--- a/ZombieGuiTest/en.lproj/MainStoryboard.storyboard
+++ b/ZombieGuiTest/en.lproj/MainStoryboard.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2549" systemVersion="11E2617" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.1" toolsVersion="2182" systemVersion="11E53" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="2">
     <dependencies>
         <deployment defaultVersion="1296" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1498"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1179"/>
     </dependencies>
     <scenes>
         <!--Login View Controller-->
@@ -197,7 +197,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rdo-t9-XQU" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="1pQ-Rg-iz9" customClass="OptionsViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3Em-Vc-HwN">
-                        <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1004"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Server IP Address" minimumFontSize="17" id="cKY-RT-oTK">
@@ -333,16 +333,32 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" id="KxZ-Jd-IIU">
-                                <rect key="frame" x="50" y="48" width="668" height="908"/>
+                                <rect key="frame" x="50" y="48" width="668" height="831"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </mapView>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Health" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="ouR-ME-7o5">
+                                <rect key="frame" x="363" y="901" width="84" height="33"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="hd1-I7-wb4">
+                                <rect key="frame" x="346" y="942" width="119" height="42"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="39"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="mhK-cZ-qEZ"/>
                     <connections>
                         <outlet property="MapView" destination="KxZ-Jd-IIU" id="1q4-eP-QC8"/>
-                        <segue destination="PDc-oy-GiR" kind="modal" identifier="segMapViewToFightView" id="GEE-94-pdc"/>
+                        <outlet property="healthLabel" destination="hd1-I7-wb4" id="Ky1-4Q-wdc"/>
+                        <outlet property="mapView" destination="KxZ-Jd-IIU" id="Fll-zJ-mrz"/>
+                        <segue destination="PDc-oy-GiR" kind="push" identifier="segMapViewToFightView" id="GEE-94-pdc"/>
                     </connections>
                 </viewController>
             </objects>
@@ -412,7 +428,7 @@
                     </tableView>
                     <navigationItem key="navigationItem" id="5fg-FE-ZVc"/>
                     <connections>
-                        <segue destination="ksl-lR-LfY" kind="modal" identifier="segFightViewToMapView" id="1H2-8S-3o3"/>
+                        <segue destination="ksl-lR-LfY" kind="push" identifier="segFightViewToMapView" id="1H2-8S-3o3"/>
                         <segue destination="yLB-k0-mcp" kind="modal" identifier="segFightViewToMainMenu" id="mQG-Fp-Xu7"/>
                     </connections>
                 </tableViewController>
@@ -427,13 +443,59 @@
         <image name="btnLogIn_v1.png" width="394" height="342"/>
         <image name="btnOptions_v1.png" width="966" height="264"/>
     </resources>
+    <classes>
+        <class className="Create_GameViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/Create_GameViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="btnCreateGameOnClick:"/>
+                <relationship kind="outlet" name="btnCreateGame" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="edtGameName" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="FightViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/FightViewController.h"/>
+        </class>
+        <class className="JoinGameViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/JoinGameViewController.h"/>
+        </class>
+        <class className="Login_ViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/Login_ViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="edtIPAddressChanged:"/>
+                <relationship kind="action" name="onBtnLoginClick:"/>
+                <relationship kind="outlet" name="edtIPAddress" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="edtUserName" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="MainMenuCiewControllerViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MainMenuCiewControllerViewController.h"/>
+        </class>
+        <class className="MapViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MapViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="healthLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="mapView" candidateClass="MKMapView"/>
+            </relationships>
+        </class>
+        <class className="OptionsViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/OptionsViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="btnReconnectOnClick:"/>
+                <relationship kind="action" name="sgNetworkConnectionValueChanged:"/>
+                <relationship kind="action" name="startMyTimer:"/>
+                <relationship kind="action" name="stopMyTimer:"/>
+                <relationship kind="outlet" name="edtIPAddress" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="sgNetworkConnection" candidateClass="UISegmentedControl"/>
+                <relationship kind="outlet" name="txtConnecting" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="OwnNavigationController" superclassName="UINavigationController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/OwnNavigationController.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
-    <inferredMetricsTieBreakers>
-        <segue reference="mQG-Fp-Xu7"/>
-        <segue reference="x7g-x0-aQc"/>
-    </inferredMetricsTieBreakers>
 </document>
